GNOME Bugzilla – Bug 664041
Search field in the overview does not support preedit
Last modified: 2012-08-29 12:57:30 UTC
Using IBus (Pinyin) in the search field in the overview there is no preedit shown, which makes it (together with bug 664040) nearly impossible to properly enter anything in that field.
Created attachment 222114 [details] [review] st-im-text: Support pre-edit Use clutter_text_set_preedit_string() to wedge pre-edit text into ClutterText. Note that the function does not make a copy of pre-edit string, StIMText needs to maintain the memory allocated for pre-edit string (and attributes) until the object is finalized.
(In reply to comment #1) > Note that the function does not make a > copy of pre-edit string, StIMText needs to maintain the memory > allocated for pre-edit string (and attributes) until the object > is finalized. Doh, that's not true - I misread the doc. Will add a revised (simplified) patch soon.
Created attachment 222200 [details] [review] st-im-text: Support pre-edit Use clutter_text_set_preedit_string() to wedge pre-edit text into ClutterText.
Review of attachment 222200 [details] [review]: Thanks for the patch. Looks good besides the unused variable. Do you have commit access? Otherwise I can push. Don't bother about submitting a new patch without the unused variable, just push without it or I can do that too. ::: src/st/st-im-text.c @@ +152,3 @@ +{ + ClutterText *clutter_text = CLUTTER_TEXT (imtext); + StIMTextPrivate *priv = imtext->priv; 'priv' isn't used
*** Bug 680312 has been marked as a duplicate of this bug. ***
(In reply to comment #4) > Looks good besides the unused variable. > > Do you have commit access? Otherwise I can push. No, I don't. Please commit. Thanks for the review and correction.
Attachment 222200 [details] pushed as ee60863 - st-im-text: Support pre-edit